# Pixiv-PBD-Manager

./: .gitattributes  .gitignore  README.en.md  README.md  artists.json  build_exe.py  config.example.json  launch_gui.bat  pixiv-pbd-api.spec  pixiv_pbd_manager_gui.py  pyproject.toml
.claude/skills/run-pixiv-pbd-manager/: SKILL.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: checks.yml  package.yml  release.yml
desktop/: .env.mock  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
desktop/e2e/: mock-gui.spec.ts  screenshot.mjs
desktop/src/: App.tsx  api.ts  constants.ts  events.ts  i18n.de.ts  i18n.en.ts  i18n.es.ts  i18n.fr.ts  i18n.ja.ts  i18n.ts  mockApi.ts  mockData.ts  styles.css  types.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.release.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs  thumbs.rs
desktop/src/components/: ArtistContextMenu.tsx  ArtistTagBar.tsx  ArtistsMoreMenu.tsx  ArtistsTable.tsx  ArtistsToolbar.tsx  ArtistsView.tsx  Button.tsx  CleanupHistory.tsx  CleanupOperationSection.tsx  ColumnResizeHandle.tsx  ConfirmModal.tsx  DisclaimerModal.tsx  ImagePreviewModal.tsx  LogsView.tsx  ModalOverlay.tsx  PaginationBar.tsx  ProgressLine.tsx  PromptModal.tsx  ScanChangeRow.tsx  ScanPreviewModal.tsx  SettingsView.tsx  SimilarResultsPanel.tsx  SimilarTable.tsx  SimilarTableRow.tsx  SimilarThumbnail.tsx  SimilarToolbar.tsx  SimilarView.tsx  UnmatchedView.tsx  thumbnailCache.ts
desktop/src/hooks/: artistEntryActions.ts  artistFavoriteActions.ts  artistOpenActions.ts  artistRemovalActions.ts  useAppState.ts  (+24 more)
docs/: manual-test-checklist.md
docs/en/: advanced-usage.md  development.md  release-notes.md
docs/zh/: advanced-usage.md  development.md  manual-test-checklist.md  release-notes.md
pixiv_pbd_manager/: __init__.py  browser.py  cleanup.py  cli.py  consent.py  cookie_store.py  database.py  doctor.py  downloader.py  events.py  gui.py  gui_api.py  i18n.py  models.py  operations.py  paths.py  resolver.py  scanner.py  similar.py  text_safety.py
pixiv_pbd_manager/gui_api/: __init__.py  __main__.py  payload.py  runtime.py  serializers.py  thumbnails.py
pixiv_pbd_manager/operations/: __init__.py  _scan_pipeline.py  _shared.py  rebuild_index.py  scan.py  updates.py
pixiv_pbd_manager/similar/: __init__.py  _shared.py  filewalk.py  fingerprint.py  grouping.py  index.py  runner.py
scripts/: build_sidecar.py  pyinstaller_entry.py  sidecar_launcher.rs  smoke.py
tests/: test_app_info.py  test_cleanup.py  test_cli.py  test_consent.py  test_cookie_store.py  test_database.py  test_doctor.py  test_downloader.py  test_events.py  test_gui_api.py  test_gui_backend.py  test_i18n.py  test_library.py  test_paths.py  test_rebuild_index.py  test_resolver.py  test_scanner.py  test_shell_permissions.py  test_similar.py
(+41 files in other folders)
