[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pixiv-pbd-manager"
version = "0.1.9"
description = "Track Pixiv artists, check updates, download artworks, and find similar images."
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0",
    "imagehash>=4.3",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["pixiv_pbd_manager*"]
exclude = ["desktop*"]

[project.scripts]
pixiv-pbd-manager = "pixiv_pbd_manager.cli:main"
pixiv-pbd-api = "pixiv_pbd_manager.gui_api:main"

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
    ".git",
    ".pixiv-pbd-manager",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "desktop/dist",
    "desktop/node_modules",
    "desktop/src-tauri/target",
    "dist",
]

[tool.ruff.lint]
select = [
    "E9",
    "F63",
    "F7",
    "F82",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# -p no:cacheprovider sidesteps a "WinError 5: Access is denied" when pytest
# tries to write .pytest_cache/ on some Windows volumes. Tests still pass
# without it; the cache write is cosmetic and the warnings drown real output.
addopts = "-q -p no:cacheprovider"
