[package]
name = "pixiv-pbd-manager-desktop"
version = "0.1.7"
description = "Tauri desktop GUI for Pixiv PBD Manager"
authors = ["J-FPV"]
edition = "2021"

[lib]
name = "pixiv_pbd_manager_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
